# rust-kr-rust

./: .travis.yml  Cargo.toml
src/: main.rs
templates/: default.mustache
tests/: capture_screen.js  capture_screen.sh
