[package]

name = "rust-kr-rust"
version = "0.0.1"
authors = ["klutzy <klutzytheklutzy@gmail.com>"]

[[bin]]

name = "rust-kr"
path = "src/main.rs"

[dependencies]

rustc-serialize = "*"
mime = "*"
iron = "*"
chrono = "*"
url = "*"
log = "*"
env_logger = "*"
mount = "*"
mustache = "*"
getopts = "*"
persistent = "*"
pulldown-cmark = "*"
router = "*"
staticfile = "*"
typemap = "*"
